examples/neg/parsing/bin_op_spaces_recovers.effekt
// this example causes a type error, showing that the parser recovers correctly
record JustCauseATypeErrorPlease()
def main() = {
  val _: JustCauseATypeErrorPlease = 1 +2
}